# KF-GINS

./: .gitignore  CMakeLists.txt
config/: kf-gins.yaml
scripts/: plot_navresult.py
src/: kf_gins.cpp  kf_gins_rt.cpp
src/common/: angle.h  earth.h  logging.h  rotation.h  types.h
src/fileio/: adisbinaryloader.hpp  adisfileloader.cc  adisfileloader.hpp  asm330fileloader.hpp  filebase.h  filesaver.cc  gnssfileloader.h  imufileloader.h  ksxtfileloader.hpp  posfileloader.cc  posfileloader.hpp  pppfileloader.cc  pppfileloader.hpp  pppsolfileloader.hpp  pvtfileloader.hpp  respppfileloader.hpp  sensors_provider.hpp  yisfileloader.hpp  ysasm330fileloader.hpp
src/kf-gins/: gi_engine.cpp  gi_engine.h  gi_engine_leqf.cpp  gi_engine_leqf.h  gi_engine_psi.cpp  gi_engine_psi.h  insmech.cpp  insmech_ecef.cpp  insmech_ecef.hpp  kf_gins_types.h
